<resources>
    <string name="app_name">FBChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="forget_password">Forget password?</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_password">Reset password</string>
    <string name="logout">Logout</string>
    <string name="chat">Chat</string>
    <string name="user_name">User name</string>
</resources>