<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_margin="@dimen/margin_10dp"
        android:hint="@string/enter_password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/tvRegister"
            android:padding="@dimen/margin_5dp"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/purple"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:id="@+id/tvforgetPassword"
        android:textSize="18sp"
        android:layout_marginLeft="@dimen/margin_20dp"/>


</LinearLayout>
</layout>