<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.RegisterFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivImg"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:shapeAppearanceOverlay="@style/Circle"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUserName"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/margin_10dp"
        android:hint="@string/enter_user_name"
        app:layout_constraintTop_toBottomOf="@id/ivImg"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_margin="@dimen/margin_10dp"
        android:hint="@string/enter_email"
        app:layout_constraintTop_toBottomOf="@id/etUserName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_margin="@dimen/margin_10dp"
        android:hint="@string/enter_password"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:text="@string/register"
        android:layout_marginTop="@dimen/margin_10dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textSize="20sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBaseline_toBaselineOf="@id/tvSignIn"
        app:layout_constraintEnd_toStartOf="@id/tvSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnRegister" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10dp"
        android:text="@string/sign_in"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvText"
        app:layout_constraintTop_toBottomOf="@id/btnRegister" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>